# jsoniq-jupyterlab-extension

./: .gitignore  README.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: publish.yml  publish_to_npm.yml  run_tests.yml
dest/: icon.js  icon.js.map  plugin.js  plugin.js.map  tsconfig.tsbuildinfo
dest/code_mirror_configuration/: register-language.js  register-language.js.map  tokenizer.js  tokenizer.js.map
dest/extractor/: extractors.js  extractors.js.map
dest/extractors/: extractors.js  extractors.js.map  icon.js  icon.js.map  plugin.js  plugin.js.map
dest/grammar/: jsoniqLexer.js  jsoniqLexer.js.map
extractors/: extractors.ts  icon.ts  plugin.ts
jsoniq_jupyterlab_extension/: __init__.py
labextension/: package.json
labextension/static/: 178.80b3fe5d913a3fb12c73.js  178.a22c8fbb484a75999a42.js  567.51a40db6d771d23bcfd5.js  891.c00b83faae2840f5c9f9.js  96.57a68ab9bd748ab2b373.js  96.83ee4b65b37329b50ac3.js  96.b4e2a9ed74178705228c.js  99.bda5da6059588524557d.js  remoteEntry.246e42244877b8336abb.js  remoteEntry.80923789faffbde9572d.js  remoteEntry.d41cdf2828d588552df9.js  remoteEntry.d98362b38356397da8d1.js  remoteEntry.fb28856af37d9743fb49.js  third-party-licenses.json
src/: const.ts  icon.ts  notebook.ts  plugin.ts  typings.d.ts
src/code-mirror/: highlight.ts  language.ts  register-language.ts  tokenSets.ts  tokenizer.ts
src/code_mirror_configuration/: register-language.ts  tokenizer.ts
src/extractor/: extractors.ts
src/grammar/: jsoniq.g4  jsoniq.interp  jsoniqLexer.interp  jsoniqLexer.ts  jsoniqListener.ts  jsoniqParser.ts
src/grammar/.antlr/: jsoniqParser.java
tests/: tokenizier.test.ts
